Fix form styles
Added a border to most form elements so they don't look like one giant
input block. Also removed styling from `input[type=file]`, as the
background really wasn't necessary.

--- a/assets/css/forms.css
+++ b/assets/css/forms.css
@@ -4,13 +4,14 @@
   max-width: 100%;
 }
 
-input:not([type="radio"]):not([type="checkbox"]), textarea,
-input[readonly]:not([type="radio"]):not([type="checkbox"]), select {
+input:not([type="file"]):not([type="radio"]):not([type="checkbox"]), textarea,
+input[readonly]:not([type="file"]):not([type="radio"]):not([type="checkbox"]),
+select, select:focus {
   width: 100%;
   max-width: 100%;
   background-color: var(--color-bg-alt);
   color: var(--color-fg-alt);
-  border: none;
+  border: 1px solid var(--color-bg-main);
   padding: 0.5rem;
 }
 
